--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
 group 'ru.job4j'
@@ -12,7 +12,22 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
+//dependencies {
+//    compile "org.jetbrains.kotlin:kotlin-stdlib"
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+//}
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "14"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "14"
 }
