--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 test {
@@ -18,8 +19,11 @@ test {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.exposed:exposed-core:$exposed_version"
+    implementation "org.jetbrains.exposed:exposed-dao:$exposed_version"
+    implementation "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
+    compile("org.postgresql:postgresql:42.2.2")
     testCompile group: 'junit', name: 'junit', version: '4.12'
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
 }
 compileKotlin {
