--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,13 @@ test {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'io.github.microutils:kotlin-logging:1.12.0'
+    implementation('io.github.microutils:kotlin-logging-jvm:2.0.0-SNAPSHOT')
     implementation "org.jetbrains.exposed:exposed-core:$exposed_version"
     implementation "org.jetbrains.exposed:exposed-dao:$exposed_version"
     implementation "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
+    implementation 'org.slf4j:slf4j-log4j1:1.7.29'
+    compile "org.slf4j:slf4j-simple:1.6.1"
     compile("org.postgresql:postgresql:42.2.2")
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
