--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-log4j1:1.7.29'
     compile "org.slf4j:slf4j-simple:1.6.1"
     compile("org.postgresql:postgresql:42.2.2")
+    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
 }
