--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+
+    id "org.jetbrains.kotlin.plugin.noarg" version "1.3.61"
 }
 
 group 'ru.job4j'
@@ -28,8 +30,10 @@ dependencies {
     compile "org.slf4j:slf4j-simple:1.6.1"
     compile("org.postgresql:postgresql:42.2.2")
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.7.0'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.20.Final'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+    compile("org.jetbrains.kotlin:kotlin-noarg: version '1.3.61'")
 }
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
@@ -37,3 +41,6 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+apply plugin: "kotlin-jpa"
+
