--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-
     id "org.jetbrains.kotlin.plugin.noarg" version "1.3.61"
 }
 
@@ -31,9 +30,10 @@ dependencies {
     compile("org.postgresql:postgresql:42.2.2")
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.7.0'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.20.Final'
+    compile("org.jetbrains.kotlin:kotlin-noarg: version 1.3.61")
+    compile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
-    compile("org.jetbrains.kotlin:kotlin-noarg: version '1.3.61'")
+    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.9'
 }
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
@@ -43,4 +43,3 @@ compileTestKotlin {
 }
 
 apply plugin: "kotlin-jpa"
-
